Added additional questions and routing

--- a/app/views/v1/check-your-answers.html
+++ b/app/views/v1/check-your-answers.html
@@ -21,7 +21,7 @@
 
       <h1 class="govuk-heading-xl">Check your answers before sending your application</h1>
 
-      <h2 class="govuk-heading-m">Contact information</h2>
+      <h2 class="govuk-heading-m">Contact infomation</h2>
 
       {{ govukSummaryList({
         classes: 'govuk-!-margin-bottom-9',
@@ -31,7 +31,7 @@
               text: "Name"
             },
             value: {
-              text: "Sarah Philips"
+              text: ""
             },
             actions: {
               items: [
@@ -45,51 +45,51 @@
           },
           {
             key: {
-              text: "Date of birth"
+              text: "Job title"
             },
             value: {
-              text: "5 January 1978"
+              text: ""
             },
             actions: {
               items: [
                 {
                   href: "#",
                   text: "Change",
-                  visuallyHiddenText: "date of birth"
+                  visuallyHiddenText: "job title"
                 }
               ]
             }
           },
           {
             key: {
-              text: "Address"
+              text: "Email address"
             },
             value: {
-              html: "72 Guild Street<br>London<br>SE23 6FH"
+              text: ""
             },
             actions: {
               items: [
                 {
                   href: "#",
                   text: "Change",
-                  visuallyHiddenText: "address"
+                  visuallyHiddenText: "email address"
                 }
               ]
             }
           },
           {
             key: {
-              text: "Contact details"
+              text: "Telephone number"
             },
             value: {
-              html: '<p class="govuk-body">07700 900457</p><p class="govuk-body">sarah.phillips@example.com</p>'
+              text: ""
             },
             actions: {
               items: [
                 {
                   href: "#",
                   text: "Change",
-                  visuallyHiddenText: "contact details"
+                  visuallyHiddenText: "telephone"
                 }
               ]
             }
