Update start page
with content from https://www.gov.uk/government/publications/eu-direct-bid-funds-uk-recipient-registration-instructions and the updated version of the guidance.

--- a/app/views/v1/index.html
+++ b/app/views/v1/index.html
@@ -30,13 +30,22 @@
 
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">EU Direct Bid funds: UK recipient registration instructions</h1>
+      <h1 class="govuk-heading-xl">Register as an organisation which gets EU direct bid funding</h1>
 
-      <p class="govuk-body">Use this service to:</p>
+      <p class="govuk-body">This page is for UK grant recipients who:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>do something</li>
-        <li>do something else</li>
+        <li>are in receipt of funding from at least one of the funds below</li>
+        <li>have submitted a bid to one of the funds below</li>
+        <li>do not know if their bid will be awarded</li>
+        <li>have been awarded a grant, but do not presently have a grant agreement number</li>
+      </ul>
+
+      <p>Do not register if:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>you receive or have applied for funding from a different EU programme - <a href="#">check what you need to do instead</a></li>
+        <li>you're already in contact with a government department about what will happen to your funding after Brexit</li>
+        <li>your project will have finished before Brexit but the final payment will come after Brexit - contact <a href="mailto: helpdesk.grants.registration@cabinetoffice.gov.uk">helpdesk.grants.registration@cabinetoffice.gov.uk</a> if you're told that you will not receive the final payment</li>
       </ul>
 
       <p class="govuk-body">Registering takes around 10 minutes.</p>
@@ -50,13 +59,15 @@
 
       <h2 class="govuk-heading-m">Before you start</h2>
 
-      <p>To use this service you need:</p>
+      <p>To register you need:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>details a</li>
-        <li>details b</li>
+        <li>your Companies House or Charities Commission number</li>
+        <li>details from your grant agreement, if you have one</li>
       </ul>
 
+      <p>If you do not have a grant agreement, fill in as much of the information as possible and provide an explanation as to why in the 'Additional Comments' section.</p>
+      <p>If you are a recipient of multiple funds, complete separate templates for each fund (e.g. recipient of both Europe for Citizens and EaSI).</p>
       <p>If you have questions about funding, <a href="mailto:helpdesk.grants.registration@cabinetoffice.gov.uk" rel="external">contact the Cabinet Office Grants Management Function</a> dealing with it.</p>
 
     </div>
