--- a/app/views/v1/index.html
+++ b/app/views/v1/index.html
@@ -72,5 +72,24 @@
 
     </div>
 
+    <div class="govuk-grid-column-one-third">
+
+      <aside class="app-related-items" role="complementary">
+        <h2 class="govuk-heading-m" id="subsection-title">
+          Related content
+        </h2>
+        <nav role="navigation" aria-labelledby="subsection-title">
+          <ul class="govuk-list govuk-!-font-size-16">
+            <li>
+              <a href="https://www.gov.uk/government/publications/european-union-funding">
+                European Union funding
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </aside>
+
+    </div>
+
   </div>
 {% endblock %}
