--- a/app/views/v1/confirmation.html
+++ b/app/views/v1/confirmation.html
@@ -29,7 +29,7 @@
       <h2 class="govuk-heading-m">What happens next</h2>
 
       <p class="govuk-body">
-        We’ve sent your application to Hackney Electoral Register Office.
+        We’ve sent your application to Cabinet Office Grants Management Function.
       </p>
 
       <p class="govuk-body">
