added FAQ page and included in navigation

--- a/app/views/v1/index.html
+++ b/app/views/v1/index.html
@@ -81,6 +81,11 @@
         <nav role="navigation" aria-labelledby="subsection-title">
           <ul class="govuk-list govuk-!-font-size-16">
             <li>
+              <a href="/v1/recipient-registration-faq">
+                Frequently Asked Questions
+              </a>
+            </li>
+            <li>
               <a href="https://www.gov.uk/government/publications/european-union-funding">
                 European Union funding
               </a>
