--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -40,7 +40,7 @@
 {% block header %}
   {% include "includes/cookie-banner.html" %}
   {{ govukHeader({
-    homepageUrl: "#"
+    homepageUrl: "/v1"
   }) }}
 {% endblock %}
 
