General housekeeping and code tidy

--- a/app/views/v1/index.html
+++ b/app/views/v1/index.html
@@ -44,7 +44,7 @@
       <p>Do not register if:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>you receive or have applied for funding from a different EU programme - <a href="#">check what you need to do instead</a></li>
-        <li>you're already in contact with a government department about what will happen to your funding after Brexit</li>
+        <li>you’re already in contact with a government department about what will happen to your funding after Brexit</li>
         <li>your project will have finished before Brexit but the final payment will come after Brexit - contact <a href="mailto: helpdesk.grants.registration@cabinetoffice.gov.uk">helpdesk.grants.registration@cabinetoffice.gov.uk</a> if you're told that you will not receive the final payment</li>
       </ul>
 
@@ -66,7 +66,7 @@
         <li>details from your grant agreement, if you have one</li>
       </ul>
 
-      <p>If you do not have a grant agreement, fill in as much of the information as possible and provide an explanation as to why in the 'Additional Comments' section.</p>
+      <p>If you do not have a grant agreement, fill in as much of the information as possible and provide an explanation as to why in the ‘Additional Comments’ section.</p>
       <p>If you are a recipient of multiple funds, complete separate templates for each fund (e.g. recipient of both Europe for Citizens and EaSI).</p>
       <p>If you have questions about funding, <a href="mailto:helpdesk.grants.registration@cabinetoffice.gov.uk" rel="external">contact the Cabinet Office Grants Management Function</a> dealing with it.</p>
 
@@ -75,21 +75,11 @@
     <div class="govuk-grid-column-one-third">
 
       <aside class="app-related-items" role="complementary">
-        <h2 class="govuk-heading-m" id="subsection-title">
-          Related content
-        </h2>
+        <h2 class="govuk-heading-m" id="subsection-title">Related content</h2>
         <nav role="navigation" aria-labelledby="subsection-title">
           <ul class="govuk-list govuk-!-font-size-16">
-            <li>
-              <a href="/v1/recipient-registration-faq">
-                Frequently Asked Questions
-              </a>
-            </li>
-            <li>
-              <a href="https://www.gov.uk/government/publications/european-union-funding">
-                European Union funding
-              </a>
-            </li>
+            <li><a href="/v1/recipient-registration-faq">Frequently Asked Questions</a></li>
+            <li><a href="https://www.gov.uk/government/publications/european-union-funding">European Union funding</a></li>
           </ul>
         </nav>
       </aside>
