--- a/app/views/v1/confirmation.html
+++ b/app/views/v1/confirmation.html
@@ -28,17 +28,11 @@
 
       <h2 class="govuk-heading-m">What happens next</h2>
 
-      <p class="govuk-body">
-        We’ve sent your application to Cabinet Office Grants Management Function.
-      </p>
+      <p class="govuk-body">We’ve sent your application to Cabinet Office Grants Management Function.</p>
 
-      <p class="govuk-body">
-        They will contact you either to confirm your registration, or to ask for more information.
-      </p>
+      <p class="govuk-body">They will contact you either to confirm your registration, or to ask for more information.</p>
 
-      <p class="govuk-body">
-        <a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)
-      </p>
+      <p class="govuk-body"><a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)</p>
 
     </div>
 
