--- a/app/views/v1/index.html
+++ b/app/views/v1/index.html
@@ -45,7 +45,7 @@
       <ul class="govuk-list govuk-list--bullet">
         <li>you receive or have applied for funding from a different EU programme - <a href="#">check what you need to do instead</a></li>
         <li>you’re already in contact with a government department about what will happen to your funding after Brexit</li>
-        <li>your project will have finished before Brexit but the final payment will come after Brexit - contact <a href="mailto: helpdesk.grants.registration@cabinetoffice.gov.uk">helpdesk.grants.registration@cabinetoffice.gov.uk</a> if you're told that you will not receive the final payment</li>
+        <li>your project will have finished before Brexit but the final payment will come after Brexit - contact <a href="mailto: helpdesk.grants.registration@cabinetoffice.gov.uk">helpdesk.grants.registration@cabinetoffice.gov.uk</a> if you’re told that you will not receive the final payment</li>
       </ul>
 
       <p class="govuk-body">Registering takes around 10 minutes.</p>
